カラー変更

--- a/assessment.css
+++ b/assessment.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #04A6EB;
-    color: #FDFFFF;
+    background-color: #ffffff;
+    color: #7a221a;
     width: 500px;
     margin-right: auto;
     margin-left : auto;
