--- a/assessment.css
+++ b/assessment.css
@@ -2,6 +2,7 @@ body {
     background-color: #ffffff;
     color: #7a221a;
     width: 700px;
+    h { line-height: 5 };
     margin-right: auto;
     margin-left : auto;
 }
