--- a/assessment.css
+++ b/assessment.css
@@ -2,7 +2,7 @@ body {
     background-color: #ffffff;
     color: #7a221a;
     width: 700px;
-    h1 { line-height: 100% };
+    h { line-height: 100% };
     margin-right: auto;
     margin-left : auto;
 }
