--- a/assessment.css
+++ b/assessment.css
@@ -2,6 +2,7 @@ body {
     background-color: #ffffff;
     color: #7a221a;
     width: 700px;
+    h { style="white-space: pre;" };
     h { line-height: 100% };
     margin-right: auto;
     margin-left : auto;
